fix: small gap in notice banner in mobile and tablet

--- a/frontend/soilhive-app/src/layouts/MainLayout/MainLayout.module.scss
+++ b/frontend/soilhive-app/src/layouts/MainLayout/MainLayout.module.scss
@@ -1,3 +1,5 @@
+@import 'styles/variables/breakpoints';
+
 .MenuWrapper {
     display: flex;
     align-items: center;
@@ -12,6 +14,10 @@
     left: 0;
     right: 0;
     z-index: 4;
+    
+    @media (max-width: $bp-desktop) {
+      top: 50px;
+    }
   }
 }
 
